Fixes #2: apply text-wrap on the pre tag.

--- a/src/style.css
+++ b/src/style.css
@@ -102,3 +102,7 @@ a:hover {
     width: 100%;
   }
 }
+
+pre {
+  text-wrap: auto;
+}
